# ivrry

./: .gitignore  Cargo.toml  README.md
assets/: data.json
assets/css/: about.css  blog.css  buttons.css  comments.css  global.css  index.css
assets/html/: bucket.html
assets/js/: comments.js  global.js  index.js  splash.js  webchat.js
content/data/: albums.json  buttons.json  stamps.json
content/posts/: IM-SORRYYYYUUHHH.md  hatepilled.md  motm-01.md  test.md
posts/: IM-SORRYYYYUUHHH.md  hatepilled.md  idk.md  motm-01.md  test.md
src/: builder.rs  main.rs  publisher.rs  routes.rs  server.rs
src/contexts/: about.rs  blog.rs  buttons.rs  diagnostic.rs  index.rs  mod.rs  projects.rs
src/routes/: about.rs  blog.rs  buttons.rs  diagnostic.rs  guestbook.rs  index.rs  not_found.rs  projects.rs
templates/: _base.html  _post.html  about.html  blog.html  buttons.html  diagnostic.html  guestbook.html  index.html  not_found.html  projects.html
tmp/: about.html
tmp/blog/: index.html
