[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
askama_warp = "0.13.0"
minijinja = {version = "2.9.0", features = ["loader"]}
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
warp = "0.3.7"
