[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
fs_extra = "1.3.0"
gray_matter = "0.2.8"
minijinja = {version = "2.9.0", features = ["loader"]}
pulldown-cmark = "0.13.0"
reqwest = {version = "0.12.15", features = ["json", "multipart"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
walkdir = "2.5.0"
warp = "0.3.7"
zip = "2.6.1"
